# kmkm

./: .editorconfig  .gitattributes  .gitignore  .hlint.yaml  Language-Kmkm-Builder-C-Pass1.html  Language-Kmkm-Builder-C-Pass2.html  Language-Kmkm-Builder-C-Pass3.html  Language-Kmkm-Builder-C-Syntax.html  Language-Kmkm-Builder-C.html  Language-Kmkm-Builder-Pass1.html  Language-Kmkm-Builder-Pass2.html  Language-Kmkm-Builder-Pass3.html  Language-Kmkm-Builder-Pass4.html  Language-Kmkm-Config.html  Language-Kmkm-Exception.html  Language-Kmkm-Parser-Sexp.html  Language-Kmkm-Syntax-Base.html  Language-Kmkm-Syntax-Phase1.html  Language-Kmkm-Syntax-Phase2.html  Language-Kmkm-Syntax-Phase3.html  Language-Kmkm-Syntax-Phase4.html  Language-Kmkm-Syntax-Phase5.html  Language-Kmkm-Syntax-Phase6.html  Language-Kmkm-Syntax-Type.html  Language-Kmkm-Syntax-Value.html  Language-Kmkm-Syntax.html  Language-Kmkm.html  Makefile  Makefile.linux  Makefile.windows  README.md  cabal.project  doc-index.html  hie.yaml  index.html  kmkm.cabal  kmkm.haddock
.github/workflows/: main.yaml
app/: kmkm.hs  main.hs
compiler/: .gitignore  .hlint.yaml  CHANGELOG.md  Makefile  Makefile.linux  Makefile.windows  README.md  cabal.ghc-9.2.project  cabal.project  hie.yaml  kmkm.cabal
compiler/app/: kmkm.hs
compiler/config/: package.dhall
compiler/config/Config/: Type.dhall  default.dhall
compiler/config/TypeMap/: default.dhall
compiler/src/Barbies/Bare/: Layered.hs
compiler/src/Data/Functor/: F.hs  With.hs
compiler/src/Data/Functor/Barbie/: Layered.hs
compiler/src/Language/: Kmkm.hs
compiler/src/Language/Kmkm/: Compile.hs  Config.hs  Exception.hs  Primitive.hs  Syntax.hs
compiler/src/Language/Kmkm/Internal/: Compile.hs  Exception.hs  Syntax.hs
compiler/src/Language/Kmkm/Internal/Compile/: C.hs
compiler/src/Language/Kmkm/Internal/Parse/: Location.hs  Sexp.hs
compiler/src/Language/Kmkm/Internal/Parse/Sexp/: C.hs
compiler/src/Language/Kmkm/Internal/Syntax/: Sexp.hs
compiler/src/Language/Kmkm/Internal/Syntax/C/: PolymorphicPointed.hs
compiler/src/Language/Kmkm/Internal/Syntax/Core/: Common.hs  NameResolved.hs  NameUnresolved.hs
compiler/src/Language/Kmkm/Internal/Syntax/Core/NameResolved/: Curried.hs  Uncurried.hs
compiler/src/Language/Kmkm/Internal/Syntax/Core/NameResolved/Typed/Curried/: LambdaUnlifted.hs
compiler/src/Language/Kmkm/Internal/Syntax/Core/NameResolved/Typed/Uncurried/: LambdaLifted.hs  LambdaUnlifted.hs
compiler/src/Language/Kmkm/Internal/Syntax/Core/NameResolved/Untyped/Curried/: LambdaUnlifted.hs
compiler/src/Language/Kmkm/Internal/Syntax/Core/NameUnresolved/: Curried.hs
compiler/src/Language/Kmkm/Internal/Syntax/Core/NameUnresolved/Untyped/Curried/: LambdaUnlifted.hs
compiler/src/Language/Kmkm/Internal/Syntax/Sexp/: Token.hs
compiler/src/Language/Kmkm/Parse/: Sexp.hs
compiler/test/batch/: main.hs
compiler/test/batch/asset/: dependency.c  dependency.s.km  ffi.c  function1.c  function1.s.km  let.c  number.c
compiler/test/spec/: Instance.hs  Utility.hs
compiler/test/spec/Language/Kmkm/: SyntaxSpec.hs
compiler/test/spec/Language/Kmkm/Internal/: SyntaxSpec.hs
compiler/test/spec/Language/Kmkm/Internal/Parse/: SexpSpec.hs
compiler/test/spec/Language/Kmkm/Parse/: SexpSpec.hs
config/CHeader/: Type.dhall
config/Config/: Config.dhall  Type.dhall  default.dhall  package.dhall
config/TypeMap/: TypeMap.dhall  default.dhall  package.dhall
dist-newstyle/cache/: compiler
editor/vscode/: README.md  language-configuration.json  package-lock.json  package.json
editor/vscode/dev/: clean.js
editor/vscode/syntaxes/: kmkm.tmLanguage.json
src/Language/: Kmkm.hs
src/Language/Kmkm/: Compile.hs  Compiler.hs  Config.hs  Exception.hs  Syntax.hs
src/Language/Kmkm/Builder/: C.hs  Pass1.hs  Pass2.hs  Pass3.hs  Pass4.hs
src/Language/Kmkm/Builder/C/: Pass1.hs  Pass2.hs  Pass3.hs  Pass4.hs  Pass5.hs  Phase1.hs  Phase2.hs  Syntax.hs
src/Language/Kmkm/Parse/: Sexp.hs
src/Language/Kmkm/Parser/: Sexp.hs
src/Language/Kmkm/Syntax/: Base.hs  Phase1.hs  Phase2.hs  Phase3.hs  Phase4.hs  Phase5.hs  Phase6.hs  Phase7.hs  Type.hs  Value.hs
test/: run.ps1
test/batch/: main.hs
test/batch/asset/: definition.c  definition.s.km  dependencies.c  dependencies.s.km  dependency.c  dependency.h  dependency.s.km  ffi.c  ffi.s.km  function.c  function.s.km  function1.c  function1.s.km  main.h  main.s.km  number.c  number.s.km  procedure.c  procedure.s.km  test1.c  test1.km.lisp  test2.c  test2.s.km  test3.c  test3.km.lisp  test4.c  test4.km.lisp  test5.c  test5.s.km
test/case/definition/: definition.c  definition.h  definition.s.km
test/case/dependency/: dependency.c  dependency.h  dependency.s.km
test/case/ffi/: ffi.c  ffi.h  ffi.s.km
test/case/func/: func.c  func.h  func.s.km
test/case/let/: let.c  let.h  let.s.km
test/case/main/: main.c  main.h  main.s.km
test/case/number/: number.c  number.h  number.s.km
test/case/parametricPolymorphism/: parametricPolymorphism.c  parametricPolymorphism.h  parametricPolymorphism.s.km
test/case/procedure/: procedure.c  procedure.h  procedure.s.km
test/case/string/: string.c  string.h  string.s.km
test/spec/Language/Kmkm/Builder/: Pass1Spec.hs
test/spec/Language/Kmkm/Builder/C/: Pass1Spec.hs  Pass2Spec.hs
test/spec/Language/Kmkm/Parse/: SexpSpec.hs
test/spec/Language/Kmkm/Parser/: SexpSpec.hs
