cabal-version: 2.2

name: kmkm
version: 0.1.0.0
synopsis: 
description: 
homepage: https://github.com/kakkun61/kmkm
bug-reports: https://github.com/kakkun61/kmkm/issues
license: GPL-3.0-only
license-file: COPYING
author: Kazuki Okamoto (岡本和樹)
maintainer: kazuki.okamoto@kakkun61.com
copyright: 2021 Kazuki Okamoto (岡本和樹)
category: language
build-type: Simple
tested-with: GHC == 8.6.5, GHC == 8.8.4, GHC == 8.10.4, GHC == 9.0.1
extra-source-files: README.md,
                    CHANGELOG.md

common common
  build-depends: base >= 4 && < 5
  ghc-options: -Wall
               -Wcompat
  default-language: Haskell2010
  default-extensions: NoStarIsType

library
  import: common
  hs-source-dirs: src
  exposed-modules: Language.Kmkm
                   Language.Kmkm.Builder.C
                   Language.Kmkm.Builder.C.Pass1
                   Language.Kmkm.Builder.C.Pass2
                   Language.Kmkm.Builder.C.Syntax
                   Language.Kmkm.Builder.Pass1
                   Language.Kmkm.Builder.Pass2
                   Language.Kmkm.Builder.Pass3
                   Language.Kmkm.Builder.Pass4
                   Language.Kmkm.Exception
                   Language.Kmkm.Parser.Sexp
                   Language.Kmkm.Syntax
                   Language.Kmkm.Syntax.Base
                   Language.Kmkm.Syntax.Phase1
                   Language.Kmkm.Syntax.Phase2
                   Language.Kmkm.Syntax.Phase3
                   Language.Kmkm.Syntax.Phase4
                   Language.Kmkm.Syntax.Phase5
                   Language.Kmkm.Syntax.Type
                   Language.Kmkm.Syntax.Value
  build-depends: containers,
                 exceptions,
                 megaparsec,
                 hashable,
                 language-c,
                 mtl,
                 parsers,
                 parsers-megaparsec,
                 pretty,
                 text
  ghc-options: -Wincomplete-uni-patterns
               -Wincomplete-record-updates
               -Wmonomorphism-restriction
               -Wmissing-exported-signatures
               -Wmissing-export-lists
               -Wmissing-home-modules
               -Wmissing-import-lists
               -Widentities
               -Wpartial-fields
               -Wredundant-constraints
               -Wno-name-shadowing
  if impl(ghc >= 9.2)
    ghc-options: -Wpartial-fields

executable kmkm
  import: common
  hs-source-dirs: app
  main-is: main.hs
  build-depends: kmkm,
                 filepath,
                 optparse-declarative,
                 pretty,
                 text,
                 with-utf8

test-suite doctest
  import: common
  type: exitcode-stdio-1.0
  main-is: main.hs
  hs-source-dirs: test/doctest
  build-depends: kmkm,
                 doctest
  ghc-options: -threaded
               -rtsopts
               -with-rtsopts=-N
  build-tool-depends: doctest-discover:doctest-discover

test-suite spec
  import: common
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs: test/spec
  other-modules: Language.Kmkm.Builder.C.Pass1Spec
                 Language.Kmkm.Builder.Pass1Spec
                 Language.Kmkm.Parser.SexpSpec
  build-depends: kmkm,
                 megaparsec,
                 hspec
  ghc-options: -threaded
               -rtsopts
               -with-rtsopts=-N
  build-tool-depends: hspec-discover:hspec-discover

test-suite batch
  import: common
  type: exitcode-stdio-1.0
  main-is: main.hs
  hs-source-dirs: test/batch
  build-depends: kmkm,
                 ansi-terminal,
                 directory,
                 either-result,
                 language-c,
                 pretty,
                 safe-exceptions,
                 text,
                 with-utf8
  ghc-options: -threaded
               -rtsopts
               -with-rtsopts=-N
