cabal-version: 2.2

name: kmkm
version: 0.1.0.0
synopsis: 
description: 
homepage: https://github.com/kakkun61/kmkm
bug-reports: https://github.com/kakkun61/kmkm/issues
license: GPL-3.0-only
license-file: COPYING
author: Kazuki Okamoto (岡本和樹)
maintainer: kazuki.okamoto@kakkun61.com
copyright: 2021 Kazuki Okamoto (岡本和樹)
category: language
build-type: Simple
tested-with: GHC == 8.6.5, GHC == 8.8.4, GHC == 8.10.4, GHC == 9.0.1
extra-source-files: README.md,
                    CHANGELOG.md

common common
  build-depends: base >= 4 && < 5
  ghc-options: -Wall
               -Wcompat
  default-language: Haskell2010
  default-extensions: NoStarIsType

common warnings
  ghc-options: -Wincomplete-uni-patterns
               -Wincomplete-record-updates
               -Wmonomorphism-restriction
               -Wmissing-exported-signatures
               -Wmissing-export-lists
               -Wmissing-home-modules
               -Wmissing-import-lists
               -Widentities
               -Wpartial-fields
               -Wredundant-constraints
               -Wno-name-shadowing

library
  import: common,
          warnings
  hs-source-dirs: src
  exposed-modules: Language.Kmkm
                   Language.Kmkm.Build.C.C
                   Language.Kmkm.Build.C.Declare
                   Language.Kmkm.Build.C.IntermediateC
                   Language.Kmkm.Build.C.Simplify
                   Language.Kmkm.Build.C.Syntax
                   Language.Kmkm.Build.C.Thunk
                   Language.Kmkm.Build.LambdaLift
                   Language.Kmkm.Build.NameResolve
                   Language.Kmkm.Build.PartiallyApply
                   Language.Kmkm.Build.TypeCheck
                   Language.Kmkm.Build.Uncurry
                   Language.Kmkm.Compile
                   Language.Kmkm.Config
                   Language.Kmkm.Exception
                   Language.Kmkm.Parse.Sexp
                   Language.Kmkm.Primitive
                   Language.Kmkm.Syntax
  build-depends: algebraic-graphs,
                 containers,
                 data-default-class,
                 exceptions,
                 filepath,
                 megaparsec,
                 hashable,
                 language-c,
                 mtl,
                 parsers,
                 parsers-megaparsec,
                 pretty,
                 safe-exceptions,
                 text
  if impl(ghc >= 9.2)
    ghc-options: -Wpartial-fields

executable kmkm
  import: common,
          warnings
  hs-source-dirs: app
  main-is: kmkm.hs
  build-depends: kmkm == 0.1.0.0,
                 data-default-class,
                 dhall,
                 directory,
                 filepath,
                 optparse-declarative >= 0.4.2,
                 safe-exceptions,
                 text,
                 with-utf8

test-suite doctest
  import: common
  type: exitcode-stdio-1.0
  main-is: main.hs
  hs-source-dirs: test/doctest
  build-depends: kmkm == 0.1.0.0,
                 doctest
  ghc-options: -threaded
               -rtsopts
               -with-rtsopts=-N
  build-tool-depends: doctest-discover:doctest-discover

test-suite spec
  import: common
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs: test/spec
  other-modules: Language.Kmkm.Build.C.IntermediateCSpec
                 Language.Kmkm.Build.TypeCheckSpec
                 Language.Kmkm.Parse.SexpSpec
  build-depends: kmkm == 0.1.0.0,
                 data-default-class,
                 megaparsec,
                 hspec
  ghc-options: -threaded
               -rtsopts
               -with-rtsopts=-N
  build-tool-depends: hspec-discover:hspec-discover

test-suite batch
  import: common
  type: exitcode-stdio-1.0
  main-is: main.hs
  hs-source-dirs: test/batch
  build-depends: kmkm == 0.1.0.0,
                 ansi-terminal,
                 bytestring,
                 data-default-class,
                 directory,
                 language-c,
                 pretty,
                 safe-exceptions,
                 text,
                 with-utf8
  ghc-options: -threaded
               -rtsopts
               -with-rtsopts=-N
