cabal-version: 2.2

name: kmkm
version: 0.1.0.0
synopsis: 
description: 
homepage: https://github.com/kakkun61/kmkm
bug-reports: https://github.com/kakkun61/kmkm/issues
license: GPL-3.0-only
license-file: COPYING
author: Kazuki Okamoto (岡本和樹)
maintainer: kazuki.okamoto@kakkun61.com
copyright: 2021 Kazuki Okamoto (岡本和樹)
category: language
build-type: Simple
tested-with: GHC == 8.6.5, GHC == 8.8.4, GHC == 8.10.4, GHC == 9.0.1
extra-source-files: README.md,
                    CHANGELOG.md

common common
  build-depends: base >= 4 && < 5
  ghc-options: -Wall
               -Wcompat
  default-language: Haskell2010
  default-extensions: NoStarIsType
  if impl(ghc >= 9.2)
    default-extensions: NoFieldSelectors

common warnings
  ghc-options: -Wincomplete-uni-patterns
               -Wincomplete-record-updates
               -Wmonomorphism-restriction
               -Wmissing-exported-signatures
               -Wmissing-export-lists
               -Wmissing-home-modules
               -Wmissing-import-lists
               -Widentities
               -Wpartial-fields
               -Wredundant-constraints
               -Wno-name-shadowing

library
  import: common,
          warnings
  hs-source-dirs: src
  exposed-modules: Language.Kmkm
                   Language.Kmkm.Internal.Build.C.C
                   Language.Kmkm.Internal.Build.C.Declare
                   Language.Kmkm.Internal.Build.C.IntermediateC
                   Language.Kmkm.Internal.Build.C.Simplify
                   Language.Kmkm.Internal.Build.C.Syntax
                   Language.Kmkm.Internal.Build.C.Thunk
                   Language.Kmkm.Internal.Build.LambdaLift
                   Language.Kmkm.Internal.Build.NameResolve
                   Language.Kmkm.Internal.Build.PartiallyApply
                   Language.Kmkm.Internal.Build.TypeCheck
                   Language.Kmkm.Internal.Build.Uncurry
                   Language.Kmkm.Internal.Compile
                   Language.Kmkm.Internal.Exception
                   Language.Kmkm.Internal.Parse.Sexp
                   Language.Kmkm.Internal.Syntax
  build-depends: algebraic-graphs,
                 barbies,
                 barbies-layered,
                 containers,
                 data-default-class,
                 filepath,
                 megaparsec,
                 hashable,
                 mtl,
                 parsers,
                 parsers-megaparsec,
                 pointed,
                 safe-exceptions,
                 text
  default-extensions: Strict
  if impl(ghc >= 9.2)
    ghc-options: -Wpartial-fields

executable kmkm
  import: common,
          warnings
  hs-source-dirs: app
  main-is: kmkm.hs
  build-depends: kmkm == 0.1.0.0,
                 ansi-terminal,
                 containers,
                 directory,
                 filepath,
                 optparse-declarative >= 0.4.2,
                 safe-exceptions,
                 text,
                 with-utf8

test-suite doctest
  import: common
  type: exitcode-stdio-1.0
  main-is: main.hs
  hs-source-dirs: test/doctest
  build-depends: kmkm == 0.1.0.0,
                 doctest
  ghc-options: -threaded
               -rtsopts
               -with-rtsopts=-N
  build-tool-depends: doctest-discover:doctest-discover

test-suite spec
  import: common
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs: test/spec
  other-modules: Language.Kmkm.Internal.Build.C.IntermediateCSpec
                 Language.Kmkm.Internal.Build.TypeCheckSpec
                 Language.Kmkm.Internal.Parse.SexpSpec
                 Language.Kmkm.Internal.SyntaxSpec
  build-depends: kmkm == 0.1.0.0,
                 barbies-layered,
                 containers,
                 hspec,
                 megaparsec,
                 pointed
  ghc-options: -threaded
               -rtsopts
               -with-rtsopts=-N
  build-tool-depends: hspec-discover:hspec-discover
